Add caching back with config settings; better README

--- a/config_example.json
+++ b/config_example.json
@@ -3,6 +3,7 @@
     "password": "matata",
     "root_dir": "/home/$USER/notes",
     "front_page_message": "Home page of wholesomeness",
-    "ignore_patterns": ["env/.*", ".git", ".*.swp", ".*.pyc", "__pycache__", ".allmark"]
+    "ignore_patterns": ["env/.*", ".git", ".*.swp", ".*.pyc", "__pycache__", ".allmark"],
+    "cache_seconds": 50
 }
 
