--- a/config_example.json
+++ b/config_example.json
@@ -4,6 +4,8 @@
     "root_dir": "/home/$USER/notes",
     "front_page_message": "Home page of wholesomeness",
     "ignore_patterns": ["env/.*", ".git", ".*.swp", ".*.pyc", "__pycache__", ".allmark"],
-    "cache_seconds": 50
+    "cache_seconds": 50,
+    "host": "0.0.0.0",
+    "port": "port"
 }
 
