--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,7 @@
 include pervane/templates/*
 include pervane/static/img/*
+include pervane/static/js/*
+include pervane/static/js/**/*
+include pervane/static/js/**/**/*
+include pervane/static/css/*
+include pervane/static/images/*
