Add additional static files for editor.md to manifest; remove reloading upon file modification. (fixes #16)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,11 @@
 include pervane/templates/*
 include pervane/static/img/*
+include pervane/static/img/**/*
 include pervane/static/js/*
 include pervane/static/js/**/*
 include pervane/static/js/**/**/*
+include pervane/static/js/**/**/**/*
+include pervane/static/js/**/**/**/**/*
 include pervane/static/css/*
 include pervane/static/images/*
+include pervane/static/fonts/*
