Resolve to absolute path when relative path is passed to provide better access control to the file system (fixes #50); Add more file patterns to MANIFEST to resolve pip issue at #49

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+include pervane/*
 include pervane/templates/*
 include pervane/static/img/*
 include pervane/static/img/**/*
@@ -6,6 +7,8 @@ include pervane/static/js/**/*
 include pervane/static/js/**/**/*
 include pervane/static/js/**/**/**/*
 include pervane/static/js/**/**/**/**/*
+include pervane/static/js/**/**/**/**/**/*
+include pervane/static/js/**/**/**/**/**/**/*
 include pervane/static/css/*
 include pervane/static/images/*
 include pervane/static/fonts/*
