Set theme jekyll-theme-cayman

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-cayman
 google_analytics: UA-156974636-1
 show_downloads: true
 title: Pervane Plain text file based note taking and knowledge base building tool
