Major changes accumulated over the course: Remove flask-user dependencies since it's deprecated. Rewrite the main scaffolding of the serve with Flask FAB. Slowly move away from bootstrap to bulma. Tabs, modals and sidebar changed, more to come. We got rid of bootstrap.js already. Tabs need some cosmetic changes though.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 flask
 Flask-Caching
 Flask-HTTPAuth
-Flask-User
+#Flask-User  # Depracated
 Flask-BabelEx
 Flask-Login
 Flask-SQLAlchemy
 jinja2
 email_validator
-atomicfile
+atomicfile  # Remove this too
 gunicorn
+flask-appbuilder
+
