--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 flask
 Flask-Caching
 Flask-HTTPAuth
-#Flask-User  # Depracated
 Flask-BabelEx
 Flask-Login
 Flask-SQLAlchemy
 jinja2
 email_validator
-atomicfile  # Remove this too
+atomicfile
 gunicorn
 flask-appbuilder
 
